change folder scructure

--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,13 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>დავალება 6</title>
-	<link rel="stylesheet" type="text/css" href="src/style.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 	<!-- <header>this is header</header> -->
 	<section class="images-section">
-		<img class="img1 cards1" src="images/1.png" alt="building1">
-		<img class="img2 cards1" src="images/2.png" alt="building2">
+		<img class="img1 cards1" src="img/1.png" alt="building1">
+		<img class="img2 cards1" src="img/2.png" alt="building2">
 	</section>
 	<section class="cards container">
 		<div>
@@ -24,10 +24,10 @@
 				Lorem Ipsum საბეჭდი და ტიპოგრაფიული ინდუსტრიის უშინაარსო ტექსტია. იგი სტანდარტად 1500-იანი წლებიდან იქცა, როდესაც უცნობმა მბეჭდავმა ამწყობ დაზგაზე წიგნის საცდელი ეგზემპლარი დაბეჭდა.
 			</p>
 		</div>
-		<img class="img3" src="images/3.png">
+		<img class="img3" src="img/3.png">
 	</section>
 	<section class="cards container">
-		<img class="img4" src="images/4.png">
+		<img class="img4" src="img/4.png">
 		<div>
 			<h1>
 				სერვისები
