add style and html for projects and partners

--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,53 @@
 			</p>
 		</div>
 	</section>
-	<!-- <section class="container projects">this is prijects section</section> -->
+	<!-- roma grigalashvili -->
+	<section class="container projects">
+		<h1>
+			პროექტები
+		</h1>
+		<section class="project-cards">
+			<div class="project">
+				<img src="img/5.png">
+				<p>
+					ჩვენი მიმდინარე პროექტი რომელიც შენდება დიდუბეში, წერეთლის 143 ნომერში
+				</p>
+			</div>
+			<div class="project">
+				<img src="img/6.png">
+				<p>
+					ჩვენი მიმდინარე პროექტი რომელიც შენდება დიდუბეში, წერეთლის 143 ნომერში
+				</p>
+			</div>
+			<div class="project">
+				<img src="img/7.png">
+				<p>
+					ჩვენი მიმდინარე პროექტი რომელიც შენდება დიდუბეში, წერეთლის 143 ნომერში
+				</p>
+			</div>
+		</section>
+	</section>
+	<section class="container partners">
+		<h1>პროექტები</h1>
+		<div class="partner-content">
+			<section class="partner-text">
+				<h5>
+					Lorem Ipsum საბეჭდი და ტიპოგრაფიული ინდუსტრიის უშინაარსო ტექსტია. იგი სტანდარტად 1500-იანი წლებიდან იქცა, როდესაც უცნობმა მბეჭდავმა ამწყობ დაზგაზე წიგნის საცდელი ეგზემპლარი დაბეჭდა.
+				</h5>
+			</section>
+			<section class="partner-icons">
+				<img src="img/icon1.png">
+				<img src="img/icon2.png">
+				<img src="img/icon3.png">
+				<img src="img/icon4.png">
+				<img src="img/icon5.png">
+				<img src="img/icon6.png">				
+				<img src="img/icon7.png">
+				<img src="img/icon8.png">
+				<img src="img/icon9.png">	
+			</section>
+		</div>
+	</section>
 </body>
 <!-- <footer>this is footer</footer> -->
 </html>
