--- a/index.html
+++ b/index.html
@@ -1,89 +1,65 @@
 <!DOCTYPE html>
-<html>
+<html lang="ka">
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>დავალება 6</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Footer Design</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<!-- <header>this is header</header> -->
-	<section class="images-section">
-		<img class="img1 cards1" src="img/1.png" alt="building1">
-		<img class="img2 cards1" src="img/2.png" alt="building2">
-	</section>
-	<section class="cards container">
-		<div>
-			<h1>
-				ჩვენ შესახებ
-			</h1>
-			<p>
-				ცნობილი ფაქტია, რომ გვერდის წაკითხვად შიგთავსს შეუძლია მკითხველის ყურადღება მიიზიდოს და დიზაინის აღქმაში ხელი შეუშალოს. Lorem Ipsum-ის გამოყენებით ვღებულობთ იმაზე მეტ-ნაკლებად სწორი გადანაწილების ტექსტს, ვიდრე ერთიდაიგივე გამეორებადი სიტყვებია ხოლმე. შედეგად, ტექსტი ჩვეულებრივ ინგლისურს გავს, მისი წაითხვა კი შეუძლებელია. დღეს უამრავი პერსონალური საგამომცემლო პროგრამა და ვებგვერდი იყენებს Lorem Ipsum-ს, როგორც დროებით ტექსტს წყობის შესავსებად; Lorem Ipsum-ის მოძებნისას კი საძიებო სისტემები ბევრ დაუსრულებელ გვერდს გვიჩვენებენ. წლების მანძილზე ამ ტექსტის უამრავი ვერსია გამოჩნდა, ზოგი შემთხვევით დაშვებული შეცდომის გამო, ზოგი კი — განზრახ, ხუმრობით.
-			</p>
-			<p>
-				Lorem Ipsum საბეჭდი და ტიპოგრაფიული ინდუსტრიის უშინაარსო ტექსტია. იგი სტანდარტად 1500-იანი წლებიდან იქცა, როდესაც უცნობმა მბეჭდავმა ამწყობ დაზგაზე წიგნის საცდელი ეგზემპლარი დაბეჭდა.
-			</p>
-		</div>
-		<img class="img3" src="img/3.png">
-	</section>
-	<section class="cards container">
-		<img class="img4" src="img/4.png">
-		<div>
-			<h1>
-				სერვისები
-			</h1>
-			<p>
-				ცნობილი ფაქტია, რომ გვერდის წაკითხვად შიგთავსს შეუძლია მკითხველის ყურადღება მიიზიდოს და დიზაინის აღქმაში ხელი შეუშალოს. Lorem Ipsum-ის გამოყენებით ვღებულობთ იმაზე მეტ-ნაკლებად სწორი გადანაწილების ტექსტს, ვიდრე ერთიდაიგივე გამეორებადი სიტყვებია ხოლმე. შედეგად, ტექსტი ჩვეულებრივ ინგლისურს გავს, მისი წაითხვა კი შეუძლებელია. დღეს უამრავი პერსონალური საგამომცემლო პროგრამა და ვებგვერდი იყენებს Lorem Ipsum-ს, როგორც დროებით ტექსტს წყობის შესავსებად; Lorem Ipsum-ის მოძებნისას კი საძიებო სისტემები ბევრ დაუსრულებელ გვერდს გვიჩვენებენ. წლების მანძილზე ამ ტექსტის უამრავი ვერსია გამოჩნდა, ზოგი შემთხვევით დაშვებული შეცდომის გამო, ზოგი კი — განზრახ, ხუმრობით.
-			</p>
-		</div>
-	</section>
-	<!-- roma grigalashvili -->
-	<section class="container projects">
-		<h1>
-			პროექტები
-		</h1>
-		<section class="project-cards">
-			<div class="project">
-				<img src="img/5.png">
-				<p>
-					ჩვენი მიმდინარე პროექტი რომელიც შენდება დიდუბეში, წერეთლის 143 ნომერში
-				</p>
-			</div>
-			<div class="project">
-				<img src="img/6.png">
-				<p>
-					ჩვენი მიმდინარე პროექტი რომელიც შენდება დიდუბეში, წერეთლის 143 ნომერში
-				</p>
-			</div>
-			<div class="project">
-				<img src="img/7.png">
-				<p>
-					ჩვენი მიმდინარე პროექტი რომელიც შენდება დიდუბეში, წერეთლის 143 ნომერში
-				</p>
-			</div>
-		</section>
-	</section>
-	<section class="container partners">
-		<h1>პროექტები</h1>
-		<div class="partner-content">
-			<section class="partner-text">
-				<h5>
-					Lorem Ipsum საბეჭდი და ტიპოგრაფიული ინდუსტრიის უშინაარსო ტექსტია. იგი სტანდარტად 1500-იანი წლებიდან იქცა, როდესაც უცნობმა მბეჭდავმა ამწყობ დაზგაზე წიგნის საცდელი ეგზემპლარი დაბეჭდა.
-				</h5>
-			</section>
-			<section class="partner-icons">
-				<img src="img/icon1.png">
-				<img src="img/icon2.png">
-				<img src="img/icon3.png">
-				<img src="img/icon4.png">
-				<img src="img/icon5.png">
-				<img src="img/icon6.png">				
-				<img src="img/icon7.png">
-				<img src="img/icon8.png">
-				<img src="img/icon9.png">	
-			</section>
-		</div>
-	</section>
+  <!-- Footer Section -->
+  <footer class="footer">
+    <div class="footer-container">
+
+      <!-- Left Side -->
+      <div class="footer-left">
+        <h2>კონტაქტი</h2>
+        <p>
+          Lorem Ipsum არის ბეჭდური და ტიპოგრაფიული ინდუსტრიის უშინაარსო ტექსტი.
+          იგი სტანდარტად 1500-იანი წლებიდან იქცა. 
+        </p>
+
+        <!-- Map -->
+        <div class="map-box">
+  <iframe 
+    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5964.013297432339!2d44.783!3d41.720!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNDF8NDMnMTIuMCJOIDQ0fDQ3JzAwLjAiRQ!5e0!3m2!1sen!2sge!4v1664200000000"
+    allowfullscreen="" loading="lazy">
+  </iframe>
+</div>
+
+
+        <!-- Contact Info -->
+        <div class="contact-info">
+          <div class="contact-item">
+            <span class="icon">📞</span>
+            <p>+995 555 444 333</p>
+          </div>
+          <div class="contact-item">
+            <span class="icon">✉️</span>
+            <p>example@gmail.com</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Right Side -->
+      <div class="footer-right">
+        <form>
+          <input type="text" placeholder="სახელი, გვარი" required>
+          <input type="email" placeholder="ელ. ფოსტა" required>
+          <input type="text" placeholder="ტელეფონის ნომერი" required>
+          <textarea placeholder="შეტყობინება" required></textarea>
+          <button type="submit">გაგზავნა</button>
+        </form>
+      </div>
+    </div>
+
+    <!-- Bottom Bar -->
+    <div class="footer-bottom">
+      <p>ყველა უფლება დაცულია</p>
+      <p>დამზადებულია ❤️ -ით</p>
+      <p>SmartWeb</p>
+    </div>
+  </footer>
 </body>
-<!-- <footer>this is footer</footer> -->
 </html>
+
