add with animetopishvili

--- a/index.html
+++ b/index.html
@@ -84,6 +84,56 @@
 			</section>
 		</div>
 	</section>
+	<!-- Footer Section -->
+	<!-- animetopishvili -->
+	<footer class="footer">
+		<div class="footer-container">
+			<!-- Left Side -->
+			<div class="footer-left">
+				<h2>კონტაქტი</h2>
+				<p>
+				Lorem Ipsum არის ბეჭდური და ტიპოგრაფიული ინდუსტრიის უშინაარსო ტექსტი.
+				იგი სტანდარტად 1500-იანი წლებიდან იქცა. 
+				</p>
+
+				<!-- Map -->
+				<div class="map-box">
+			<iframe 
+				src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5964.013297432339!2d44.783!3d41.720!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNDF8NDMnMTIuMCJOIDQ0fDQ3JzAwLjAiRQ!5e0!3m2!1sen!2sge!4v1664200000000"
+				allowfullscreen="" loading="lazy">
+			</iframe>
+			</div>
+			<!-- Contact Info -->
+			<div class="contact-info">
+				<div class="contact-item">
+					<span class="icon">📞</span>
+					<p>+995 555 444 333</p>
+				</div>
+				<div class="contact-item">
+					<span class="icon">✉️</span>
+					<p>example@gmail.com</p>
+				</div>
+				</div>
+			</div>
+
+			<!-- Right Side -->
+			<div class="footer-right">
+				<form>
+					<input type="text" placeholder="სახელი, გვარი" required>
+					<input type="email" placeholder="ელ. ფოსტა" required>
+					<input type="text" placeholder="ტელეფონის ნომერი" required>
+					<textarea placeholder="შეტყობინება" required></textarea>
+					<button type="submit">გაგზავნა</button>
+				</form>
+			</div>
+		</div>
+
+		<!-- Bottom Bar -->
+		<div class="footer-bottom">
+			<p>ყველა უფლება დაცულია</p>
+			<p>დამზადებულია ❤️ -ით</p>
+			<p>SmartWeb</p>
+		</div>
+  	</footer>
 </body>
-<!-- <footer>this is footer</footer> -->
 </html>
